--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
+PORT=5000
 JWT_SECRET=somethingsecret
 MONGODB_URI=mongodb+srv://mukesh:edurights@atlascluster.1jtocjr.mongodb.net/rejoice?retryWrites=true&w=majority&appName=AtlasCluster
 PAYPAL_CLIENT_ID=
